// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParksContainer ParksContainer container should match snapshot if isLoaded is false but there is no error 1`] = `
<section
  className="parks-content"
>
  <LoadingImage />
</section>
`;

exports[`ParksContainer ParksContainer container should match snapshot if there is an error 1`] = `
<section
  className="parks-content"
>
  <p>
    This is error!
  </p>
</section>
`;

exports[`ParksContainer ParksContainer container should match snapshot with all data passed in correctly and isLoaded is true 1`] = `
<section
  className="parks-content"
>
  <Connect(ParkCardPreview)
    fullName="Some National Park"
    id={1}
    image="images/some.jpg"
    key="1"
  />
</section>
`;
